<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/lstItemStepSummary">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:text="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:id="@+id/txtStepCounter"
            android:gravity="center"
            android:textSize="10dp"

            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.9">

            <TextView
                android:text="Step 1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtStepHeader"
                android:textSize="14dp"/>

            <TextView
                android:text="Step 1 summary actions to be performed."
                android:paddingTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtStepSummary"
                android:textSize="10dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/step_action_assign"
                    android:id="@+id/btnAssign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorTransparent"
                    android:textSize="8dp"/>

                <Button
                    android:text="@string/step_action_comment"
                    android:id="@+id/btnComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorTransparent"
                    android:textSize="8dp"/>

                <Button
                    android:text="@string/step_action_status"
                    android:id="@+id/btnStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorTransparent"
                    android:textSize="8dp"/>
            </LinearLayout>

        </LinearLayout>

    </TableRow>

</TableLayout>