<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_step_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kntombela.customlistapp.StepDetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/step_select_assign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinAssign"
                android:layout_weight="1"/>

            <TextView
                android:text="@string/step_select_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinStatus"
                android:layout_weight="1"/>
        </LinearLayout>

        <TextView
            android:text="Step 1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detail_txtStepHeader"
            android:textSize="20dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/detail_txtDetail"
            android:layout_weight=".7"
            android:text="High Level Summary for step 1 actions.
\nA more detailed description of each and every action to be taken by
whom, when and how the actions is to be performed.
\nWhen a step is opened the menu item will list the applicable resources available to the that step.
This includes external urls and other mobile applications such as the contact list and Whatsap"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:ems="10"
            android:id="@+id/editTxtComment"
            android:layout_weight="1.3"
            android:hint="@string/step_comment"/>
    </LinearLayout>
</RelativeLayout>
